register navigation styling fixed

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -71,366 +71,12 @@
   #root .lowercase {
     text-transform: lowercase; }
   #root .App {
+    min-height: 100vh;
     background-color: #212120; }
-  #root .container.register-component,
-  #root .container.login-component {
-    font-family: "Work Sans", sans-serif;
-    color: white;
-    background: #212120;
-    margin: 0 auto;
-    width: 100%;
-    min-height: 100vh; }
-    #root .container.register-component .onboarding-nav,
-    #root .container.login-component .onboarding-nav {
-      color: white;
-      display: flex;
-      width: 95%;
-      margin: 0 auto;
-      justify-content: flex-end;
-      padding: 1.1% 1%; }
-    #root .container.register-component .box-container,
-    #root .container.login-component .box-container {
-      display: flex;
-      justify-content: space-between;
-      margin: 0 auto;
-      width: 85%; }
-    #root .container.register-component .box-left,
-    #root .container.login-component .box-left {
-      width: 45%;
-      margin: 0 1%;
-      display: flex;
-      justify-content: center;
-      align-content: center;
-      flex-direction: column;
-      align-items: center;
-      text-align: left;
-      max-width: 100%;
-      box-sizing: border-box; }
-      #root .container.register-component .box-left .text-container,
-      #root .container.login-component .box-left .text-container {
-        white-space: nowrap; }
-        #root .container.register-component .box-left .text-container h1,
-        #root .container.login-component .box-left .text-container h1 {
-          font-size: 5vw; }
-        #root .container.register-component .box-left .text-container h5,
-        #root .container.login-component .box-left .text-container h5 {
-          font-size: 1.5vw;
-          font-weight: normal;
-          padding-top: 2rem; }
-      #root .container.register-component .box-left .image-wrapper,
-      #root .container.login-component .box-left .image-wrapper {
-        width: 75%;
-        padding: 5% 0; }
-        #root .container.register-component .box-left .image-wrapper .logo,
-        #root .container.login-component .box-left .image-wrapper .logo {
-          width: 100%; }
-    #root .container.register-component .box-right,
-    #root .container.login-component .box-right {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin: 5%;
-      border-radius: 4px;
-      background: #212120;
-      width: 100%;
-      height: 550px; }
-      #root .container.register-component .box-right .form,
-      #root .container.login-component .box-right .form {
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center; }
-      #root .container.register-component .box-right .form-control,
-      #root .container.login-component .box-right .form-control {
-        border-radius: 4px;
-        border: 1px solid #d8d8d8;
-        max-width: 320px;
-        width: 100%;
-        height: auto;
-        padding: 2.7% 1.7%;
-        margin: 2.6% auto;
-        margin-bottom: 1rem; }
-      #root .container.register-component .box-right input::placeholder,
-      #root .container.login-component .box-right input::placeholder {
-        font-size: 1.1rem;
-        color: #d8d8d8; }
-      #root .container.register-component .box-right .bottom-form,
-      #root .container.login-component .box-right .bottom-form {
-        width: 100%;
-        display: flex;
-        flex-direction: column-reverse;
-        margin: 0; }
-        #root .container.register-component .box-right .bottom-form .check-box-container,
-        #root .container.login-component .box-right .bottom-form .check-box-container {
-          display: flex;
-          flex-direction: row;
-          padding-top: 13px;
-          align-items: center; }
-          #root .container.register-component .box-right .bottom-form .check-box-container p,
-          #root .container.login-component .box-right .bottom-form .check-box-container p {
-            color: black;
-            white-space: nowrap; }
-        #root .container.register-component .box-right .bottom-form .btn-container,
-        #root .container.login-component .box-right .bottom-form .btn-container {
-          width: 100%;
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-          padding-bottom: 15px; }
-          #root .container.register-component .box-right .bottom-form .btn-container .signup-btn,
-          #root .container.register-component .box-right .bottom-form .btn-container button.login-btn,
-          #root .container.login-component .box-right .bottom-form .btn-container .signup-btn,
-          #root .container.login-component .box-right .bottom-form .btn-container button.login-btn {
-            border: none;
-            width: 100%;
-            max-width: 100%;
-            height: 50px;
-            border-radius: 4px;
-            background: #00B392;
-            color: #212120;
-            font-size: 14px;
-            margin-bottom: 2%; }
-          #root .container.register-component .box-right .bottom-form .btn-container .fancy,
-          #root .container.login-component .box-right .bottom-form .btn-container .fancy {
-            line-height: 0.5;
-            text-align: center;
-            margin: 1% 0; }
-          #root .container.register-component .box-right .bottom-form .btn-container .fancy span,
-          #root .container.login-component .box-right .bottom-form .btn-container .fancy span {
-            display: inline-block;
-            position: relative; }
-          #root .container.register-component .box-right .bottom-form .btn-container .fancy span:before,
-          #root .container.register-component .box-right .bottom-form .btn-container .fancy span:after,
-          #root .container.login-component .box-right .bottom-form .btn-container .fancy span:before,
-          #root .container.login-component .box-right .bottom-form .btn-container .fancy span:after {
-            content: "";
-            position: absolute;
-            height: 5px;
-            border-bottom: 1px solid white;
-            top: 0;
-            width: 104px; }
-          #root .container.register-component .box-right .bottom-form .btn-container .fancy span:before,
-          #root .container.login-component .box-right .bottom-form .btn-container .fancy span:before {
-            right: 100%;
-            margin-right: 15px; }
-          #root .container.register-component .box-right .bottom-form .btn-container .fancy span:after,
-          #root .container.login-component .box-right .bottom-form .btn-container .fancy span:after {
-            left: 100%;
-            margin-left: 15px; }
-          #root .container.register-component .box-right .bottom-form .btn-container .google-btn,
-          #root .container.login-component .box-right .bottom-form .btn-container .google-btn {
-            width: 100%;
-            height: 50px;
-            background-color: white;
-            border-radius: 4px;
-            box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-            margin-top: 2%; }
-            #root .container.register-component .box-right .bottom-form .btn-container .google-btn .google-icon-wrapper,
-            #root .container.login-component .box-right .bottom-form .btn-container .google-btn .google-icon-wrapper {
-              position: absolute;
-              margin-top: 4px;
-              margin-left: 1px;
-              width: 40px;
-              height: 40px;
-              border-radius: 2px;
-              background-color: white; }
-            #root .container.register-component .box-right .bottom-form .btn-container .google-btn .google-icon,
-            #root .container.login-component .box-right .bottom-form .btn-container .google-btn .google-icon {
-              margin-top: 11px;
-              margin-left: 11px;
-              width: 18px;
-              height: 18px; }
-            #root .container.register-component .box-right .bottom-form .btn-container .google-btn .btn-text,
-            #root .container.login-component .box-right .bottom-form .btn-container .google-btn .btn-text {
-              margin: 7% 2% 0 30%;
-              color: #212120;
-              font-size: 14px;
-              letter-spacing: 0.2px;
-              font-family: "Roboto"; }
-            #root .container.register-component .box-right .bottom-form .btn-container .google-btn:hover,
-            #root .container.login-component .box-right .bottom-form .btn-container .google-btn:hover {
-              box-shadow: 0 0 6px #4285f4; }
-            #root .container.register-component .box-right .bottom-form .btn-container .google-btn:active,
-            #root .container.login-component .box-right .bottom-form .btn-container .google-btn:active {
-              background: white; }
-          #root .container.register-component .box-right .bottom-form .btn-container .fb-btn,
-          #root .container.login-component .box-right .bottom-form .btn-container .fb-btn {
-            width: 100%;
-            height: 50px;
-            background-color: #3A5A97;
-            border-radius: 4px;
-            box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-            margin-top: 2%; }
-            #root .container.register-component .box-right .bottom-form .btn-container .fb-btn .fb-icon-wrapper,
-            #root .container.login-component .box-right .bottom-form .btn-container .fb-btn .fb-icon-wrapper {
-              position: absolute;
-              margin-top: 4px;
-              margin-left: 1px;
-              width: 40px;
-              height: 40px;
-              border-radius: 2px; }
-            #root .container.register-component .box-right .bottom-form .btn-container .fb-btn .fb-icon,
-            #root .container.login-component .box-right .bottom-form .btn-container .fb-btn .fb-icon {
-              margin-top: 11px;
-              margin-left: 11px;
-              width: 18px;
-              height: 18px; }
-            #root .container.register-component .box-right .bottom-form .btn-container .fb-btn .btn-text,
-            #root .container.login-component .box-right .bottom-form .btn-container .fb-btn .btn-text {
-              margin: 7% 2% 0 30%;
-              color: white;
-              font-size: 14px;
-              letter-spacing: 0.2px;
-              font-family: "Roboto"; }
-            #root .container.register-component .box-right .bottom-form .btn-container .fb-btn:hover,
-            #root .container.login-component .box-right .bottom-form .btn-container .fb-btn:hover {
-              box-shadow: 0 0 6px #4285f4; }
-            #root .container.register-component .box-right .bottom-form .btn-container .fb-btn:active,
-            #root .container.login-component .box-right .bottom-form .btn-container .fb-btn:active {
-              background: white; }
-      #root .container.register-component .box-right .bottomAccount,
-      #root .container.login-component .box-right .bottomAccount {
-        display: flex;
-        flex-direction: column;
-        padding: 5%; }
-        #root .container.register-component .box-right .bottomAccount .loginAccount,
-        #root .container.login-component .box-right .bottomAccount .loginAccount {
-          text-align: center;
-          color: #2477e5;
-          font-size: 18px; }
-        #root .container.register-component .box-right .bottomAccount .link,
-        #root .container.login-component .box-right .bottomAccount .link {
-          display: flex;
-          width: 100%;
-          height: auto;
-          font-size: 1rem;
-          text-decoration: none;
-          flex-direction: column-reverse;
-          align-items: center;
-          color: white; }
-          #root .container.register-component .box-right .bottomAccount .link:hover,
-          #root .container.login-component .box-right .bottomAccount .link:hover {
-            color: #00b392;
-            font-weight: bold; }
-      #root .container.register-component .box-right .callingError,
-      #root .container.login-component .box-right .callingError {
-        color: red;
-        display: flex;
-        justify-content: center; }
-    @media (max-width: 1068px) {
-      #root .container.register-component .box-container,
-      #root .container.login-component .box-container {
-        flex-direction: column;
-        align-items: center; }
-        #root .container.register-component .box-container .box-left,
-        #root .container.login-component .box-container .box-left {
-          width: 80%;
-          margin: 0;
-          padding: 0; }
-          #root .container.register-component .box-container .box-left .text-container,
-          #root .container.login-component .box-container .box-left .text-container {
-            margin: 0 auto;
-            width: 100%; }
-            #root .container.register-component .box-container .box-left .text-container h1,
-            #root .container.login-component .box-container .box-left .text-container h1 {
-              font-size: 10vw; }
-            #root .container.register-component .box-container .box-left .text-container h5,
-            #root .container.login-component .box-container .box-left .text-container h5 {
-              font-size: 3vw; }
-          #root .container.register-component .box-container .box-left .image-wrapper,
-          #root .container.login-component .box-container .box-left .image-wrapper {
-            width: 100%; }
-        #root .container.register-component .box-container .box-right,
-        #root .container.login-component .box-container .box-right {
-          width: 100%;
-          margin: 0;
-          padding: 0; }
-          #root .container.register-component .box-container .box-right .form,
-          #root .container.login-component .box-container .box-right .form {
-            margin: 0 auto;
-            padding: 0;
-            max-width: 100%;
-            width: 100%;
-            color: white; }
-          #root .container.register-component .box-container .box-right .btn-container .google-btn .btn-text,
-          #root .container.login-component .box-container .box-right .btn-container .google-btn .btn-text {
-            margin: 4% 2% 0 38%; }
-          #root .container.register-component .box-container .box-right .btn-container .fb-btn .btn-text,
-          #root .container.login-component .box-container .box-right .btn-container .fb-btn .btn-text {
-            margin: 4% 2% 0 38%; } }
-
-@media (max-width: 1068px) and (max-width: 600px) {
-  #root .container.register-component .box-container,
-  #root .container.login-component .box-container {
-    flex-direction: column;
-    align-items: center; }
-    #root .container.register-component .box-container .box-left,
-    #root .container.login-component .box-container .box-left {
-      width: 80%;
-      margin: 0;
-      padding: 0; }
-      #root .container.register-component .box-container .box-left .text-container,
-      #root .container.login-component .box-container .box-left .text-container {
-        margin: 0 auto;
-        width: 100%; }
-        #root .container.register-component .box-container .box-left .text-container h1,
-        #root .container.login-component .box-container .box-left .text-container h1 {
-          display: none; }
-        #root .container.register-component .box-container .box-left .text-container h5,
-        #root .container.login-component .box-container .box-left .text-container h5 {
-          display: none; }
-      #root .container.register-component .box-container .box-left .image-wrapper,
-      #root .container.login-component .box-container .box-left .image-wrapper {
-        display: none; }
-        #root .container.register-component .box-container .box-left .image-wrapper .logo,
-        #root .container.login-component .box-container .box-left .image-wrapper .logo {
-          display: none; }
-    #root .container.register-component .box-container .box-right,
-    #root .container.login-component .box-container .box-right {
-      margin: 2%;
-      padding: 0%;
-      background: #212120;
-      height: 100%; }
-      #root .container.register-component .box-container .box-right .form,
-      #root .container.login-component .box-container .box-right .form {
-        max-width: 100%; }
-      #root .container.register-component .box-container .box-right .bottom-form .btn-container .signup-btn,
-      #root .container.register-component .box-container .box-right .bottom-form .btn-container button.login-btn,
-      #root .container.login-component .box-container .box-right .bottom-form .btn-container .signup-btn,
-      #root .container.login-component .box-container .box-right .bottom-form .btn-container button.login-btn {
-        margin-top: 3%; }
-      #root .container.register-component .box-container .box-right .bottom-form .btn-container .fancy span:before,
-      #root .container.register-component .box-container .box-right .bottom-form .btn-container .fancy span:after,
-      #root .container.login-component .box-container .box-right .bottom-form .btn-container .fancy span:before,
-      #root .container.login-component .box-container .box-right .bottom-form .btn-container .fancy span:after {
-        content: "";
-        width: 800%; }
-      #root .container.register-component .box-container .box-right .bottom-form .btn-container .google-btn .btn-text,
-      #root .container.login-component .box-container .box-right .bottom-form .btn-container .google-btn .btn-text {
-        margin: 4% 2% 0 35%; }
-      #root .container.register-component .box-container .box-right .bottom-form .btn-container .fb-btn .btn-text,
-      #root .container.login-component .box-container .box-right .bottom-form .btn-container .fb-btn .btn-text {
-        margin: 4% 2% 0 35%; }
-      #root .container.register-component .box-container .box-right .bottom-form .bottomAccount,
-      #root .container.login-component .box-container .box-right .bottom-form .bottomAccount {
-        padding: 2%; }
-        #root .container.register-component .box-container .box-right .bottom-form .bottomAccount .loginAccount,
-        #root .container.login-component .box-container .box-right .bottom-form .bottomAccount .loginAccount {
-          font-size: 9px; } }
   #root .register.nav,
   #root .login.nav {
-    font-family: "Work Sans", sans-serif;
-    display: flex;
     justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    text-align: center; }
-    @media (max-width: 600px) {
-      #root .register.nav,
-      #root .login.nav {
-        flex-direction: column; } }
+    width: 100%; }
     #root .register.nav img,
     #root .login.nav img {
       align-items: center;
