--- a/src/scss/components/_onboardingNavLinks.scss
+++ b/src/scss/components/_onboardingNavLinks.scss
@@ -1,43 +1,43 @@
-.register.nav,
-.login.nav {
-  // font-family: $workSans;
-  // display: flex;
-  justify-content: space-between;
-  // align-items: center;
-  width: 100%;
-  // text-align: center;
+// .register.nav,
+// .login.nav {
+//   // font-family: $workSans;
+//   // display: flex;
+//   justify-content: space-between;
+//   // align-items: center;
+//   width: 100%;
+//   // text-align: center;
 
-  @media (max-width: 600px) {
-    // flex-direction: column;
-  }
+//   @media (max-width: 600px) {
+//     // flex-direction: column;
+//   }
 
-  img {
-    align-items: center;
-    height: 2.5rem;
-    width: auto;
-  }
+//   img {
+//     align-items: center;
+//     height: 2.5rem;
+//     width: auto;
+//   }
 
-  .signin-title {
-    display: flex;
-    color: white;
-    // align-items: flex-start;;
-  }
-}
+//   .signin-title {
+//     display: flex;
+//     color: white;
+//     // align-items: flex-start;;
+//   }
+// }
 
-@media (max-width: 600px) {
-  // img {
-    // position: absolute;
-    // width: 136px;
-    // height: 38px;
-    // left: 130px;
-    // top: 102px;
-  // }
+// @media (max-width: 600px) {
+//   // img {
+//     // position: absolute;
+//     // width: 136px;
+//     // height: 38px;
+//     // left: 130px;
+//     // top: 102px;
+//   // }
 
-  .signin-title {
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 2%;
-    font-size: 20px;
-    // text-decoration: none;
-  }
-}
+//   // .signin-title {
+//   //   display: flex;
+//   //   justify-content: flex-start;
+//   //   margin-top: 2%;
+//   //   font-size: 20px;
+//     // text-decoration: none;
+//   }
+// }
